--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,7 @@
+background #011628
 background_opacity 0.75
 cursor_shape beam
 font_family MesloLGS NF
+copy_on_select clipboard
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
